# Copyright 2018 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "ias_client"
version = "1.0.0"
authors = ["Intel Corporation"]
description = "Http/s client and utils code to connect to IAS"

[dependencies]
hyper = "0.12.11"
hyper-tls = "0.3.0"
native-tls = "0.2.1"
serde_json = "1.0"
tokio-core = "0.1.17"
futures = "0.1.24"
serde_derive = "1.0.79"
serde = "1.0"
log = "0.3.0"
hyper-proxy="0.5.0"
tokio = "0.1.11"

# Following dependencies are required only for test case execution
[dev-dependencies]
lazy_static="1.1.0"
tokio = "0.1.11"

[lib]
# The name of a target is the name of the library that will be generated.
name = "ias_client"

# This field points at where the crate is located, relative to the `Cargo.toml`.
path = "src/lib.rs"

# A flag for enabling unit tests for this target. This is used by `cargo test`.
test = true
