# Copyright 2018 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "rust_sgxffi"
version = "0.1.0"
authors = ["Intel Corporation"]
description = "Rust SGX FFI which calls SGX C++ functions"

build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "0.26.3"

[lib]
# The name of a target is the name of the library that will be generated.
name = "sgxffi"

# This field points at where the crate is located, relative to the `Cargo.toml`.
path = "src/lib.rs"

# A flag for enabling unit tests for this target. This is used by `cargo test`.
test = true

crate-type = ["cdylib", "rlib"]
